<resources>
    <string name="app_name">ForFoodiesByFoodies</string>
    <string name="login">Login</string>
    <string name="logo_welcome">TODO</string>
    <string name="logo">TODO</string>
    <string name="txtWelcome">Welcome</string>
    <string name="textView2">to</string>
    <string name="sign_in">Sign in</string>
    <string name="passwordLogin">Password</string>
    <string name="passwordRec">Click here to recover your password</string>
    <string name="registerLink">Don\'t have account yet? Register</string>
    <string name="txtUsernameLogin">Username</string>
    <string name="txtUsernameReg">Username</string>
    <string name="banner">company logo</string>
    <string name="or_sing_in_with">Or Sing in with</string>
    <string name="usernameReg">Username</string>
    <string name="or_register_with">Or Register with</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>
    <string name="txtRegistration">Registration</string>
    <string name="passwordReg">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txtPasswordLogin">Password</string>
    <string name="txtRePasswordReg">confirm password</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txtProfile">Profile</string>
    <string name="menuBanner">MENU</string>
    <string name="btnBistro">Bistro</string>
    <string name="btnStreetFood">Streetfood</string>
    <string name="btnRestaurants">Restaurants</string>
    <string name="logoMenu">logoMenu</string>
    <string name="new_place_adding">New Place Adding</string>
    <string name="enter_restaurant_name">Enter restaurant name</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_vege_nonvege_or_both">Enter Vege/NonVege/ or both</string>
    <string name="catering">Catering</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_name">Enter name</string>
    <string name="add_place">Add Place</string>
    <string name="details">DETAILS</string>
    <string name="tabRestaurants">Restaurants</string>
    <string name="tabStreetFood">Street Food</string>
    <string name="tabCatering">Catering</string>
    <string name="contextmenu">contextMenu</string>
    <string name="add_place1">Add Place</string>
    <string name="txt_restaurants">Restaurants</string>
    <string name="txt_street_food">Street Food</string>
    <string name="txt_catering">Catering</string>
    <string name="banner_rv_street_food">STREET FOOD</string>

    <string-array name="restaurants">
        <item>Gorgon</item>
        <item>Jimi</item>
        <item>Heston</item>
    </string-array>

    <string-array name="rate">
        <item>chujowy</item>
        <item>spoko</item>
        <item>zajebisty</item>
    </string-array>

    <string-array name="review">
        <item>niezjadlbym</item>
        <item>zjadlbym</item>
        <item>opierdole</item>
    </string-array>
</resources>