<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/registerLink"
        android:textColor="#B71C1C"
        android:textSize="11sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRePasswordReg" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baner" />


    <TextView
        android:id="@+id/RegisterReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in"
        android:textAlignment="textStart"
        android:textColor="@color/red_700"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin" />

    <EditText
        android:id="@+id/txtUsernameLogin"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/et_style"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="5dp"
        android:text="@string/usernameLogin"
        android:textColor="#B71C1C"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterReg"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtRePasswordReg"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/et_style"

        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:text="@string/passwordLogin"
        android:textColor="#B71C1C"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsernameLogin"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/recover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/passwordRec"
        android:textAlignment="center"
        android:textColor="#B71C1C"
        android:textSize="11sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister" />

    <TextView
        android:id="@+id/orSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sing_in_with"
        android:textAlignment="center"
        android:textColor="#B71C1C"
        android:textSize="9sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/socialIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recover"
        app:layout_constraintVertical_bias="0.638" />

    <LinearLayout
        android:id="@+id/socialIcons"
        android:layout_width="412dp"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recover"
        app:layout_constraintVertical_bias="0.803">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="665dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/facebook"
            tools:layout_editor_absoluteX="173dp"
            tools:layout_editor_absoluteY="665dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="274dp"
            tools:layout_editor_absoluteY="665dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="116dp"
        android:layout_height="113dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/logo1" />


</androidx.constraintlayout.widget.ConstraintLayout>