<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/txtMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/monoton"
        android:text="@string/menuBanner"
        android:textColor="@color/red_700"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/logoMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <Button
        android:id="@+id/btnStreetFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:text="@string/btnStreetFood"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toEndOf="@+id/btnCatering"
        app:layout_constraintTop_toBottomOf="@+id/txtMenu" />

    <Button
        android:id="@+id/btnCatering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:text="@string/catering"
        android:textSize="12dp"
        app:layout_constraintStart_toEndOf="@+id/btnRestaurants"
        app:layout_constraintTop_toBottomOf="@+id/txtMenu" />

    <Button
        android:id="@+id/btnRestaurants"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="profile"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMenu" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleRestaurant"
        android:layout_width="411dp"
        android:layout_height="598dp"
        android:scrollbarSize="10dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:background="@drawable/rec_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCatering" />

    <ImageView
        android:id="@+id/settingsDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtMenu"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_menu_24" />


</androidx.constraintlayout.widget.ConstraintLayout>