<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPlaceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/new_place_adding"
        android:textAlignment="center"
        android:fontFamily="@font/monoton"
        android:textColor="@color/red_700"
        android:textSize="30sp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


    <EditText
        android:id="@+id/editTextResName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:autofillHints=""
        android:background="@drawable/et_style"
        android:hint="@string/enter_name"
        android:padding="5dp"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextResLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:autofillHints=""
        android:background="@drawable/et_style"
        android:hint="@string/enter_location"
        android:padding="5dp"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextResDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="5dp"
        android:autofillHints=""
        android:background="@drawable/et_style"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        android:padding="5dp"
        tools:ignore="TextContrastCheck" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="32dp" />

    <CheckBox
        android:id="@+id/veganFriendly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vegan Friendly" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageRestaurantImage"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_centerVertical="true"
        android:background="@drawable/et_style"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="13dp" />

    <Button
        android:id="@+id/btnBrowseImage"
        android:layout_width="177dp"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        android:text="Browse Image" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="184dp"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:text="Upload" />

    <Button
        android:id="@+id/btnAddPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Add to database" />


</LinearLayout>


